# M3Qt

./: CMakeLists.txt  README.md  helloscreen.ui  loginscreen.ui  maincontrolapp.ui
include/: helloscreen.h  loginscreen.h  maincontrolapp.h  mainwindow.h
src/: helloscreen.cpp  loginscreen.cpp  maincontrolapp.cpp  mainwindow.cpp
